--- a/package.json
+++ b/package.json
@@ -1,47 +1,53 @@
 {
-  "name": "ontech-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@graphcms/rich-text-react-renderer": "^0.6.2",
-    "@graphcms/rich-text-types": "^0.5.1",
-    "@hookform/resolvers": "^5.1.1",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@tanstack/react-query": "^5.81.5",
-    "@tanstack/react-query-devtools": "^5.81.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "graphql": "^16.11.0",
-    "graphql-request": "^7.2.0",
-    "lucide-react": "^0.525.0",
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.59.0",
-    "react-intersection-observer": "^9.16.0",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.67"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
-  }
+	"name": "ontech-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "npx @biomejs/biome format --write ./src",
+		"lint": "npx @biomejs/biome lint  ./src",
+		"lint-fix": "npx @biomejs/biome lint --fix ./src",
+		"check": "npx @biomejs/biome check ./src",
+		"prepare": "husky",
+		"test": "vitest"
+	},
+	"dependencies": {
+		"@graphcms/rich-text-react-renderer": "^0.6.2",
+		"@graphcms/rich-text-types": "^0.5.1",
+		"@hookform/resolvers": "^5.1.1",
+		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-navigation-menu": "^1.2.13",
+		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.7",
+		"@tanstack/react-query": "^5.81.5",
+		"@tanstack/react-query-devtools": "^5.81.5",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"graphql": "^16.11.0",
+		"graphql-request": "^7.2.0",
+		"lucide-react": "^0.525.0",
+		"next": "15.3.4",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.59.0",
+		"react-intersection-observer": "^9.16.0",
+		"tailwind-merge": "^3.3.1",
+		"zod": "^3.25.67"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.0.6",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.3.4",
+		"typescript": "^5"
+	}
 }
