--- a/package.json
+++ b/package.json
@@ -49,5 +49,11 @@
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.3.4",
 		"typescript": "^5"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"@tailwindcss/oxide",
+			"sharp"
+		]
 	}
 }
